# zero-to-production-in-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.json  configuration.yml  justfile  spec.yaml
.github/workflows/: push.yml
.sqlx/: query-5a22e35728526e451e7933e79d7da877b61f1151e5fbdc24b5b434e302b1e601.json
configuration/: base-configuration.json  dev-configuration.json  local-configuration.json  prod-configuration.json
migrations/: 20240504180730_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  database.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/mailing/: email_client.rs  mod.rs
src/routes/: mod.rs  monitor.rs  subscriptions.rs
tests/: healt_check.rs  monitor_it.rs  subscriptions_it.rs
